k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: constraint-enforcement
  labels:
    name: constraint-enforcement
